[package]
name = "flowly-codec-openh264"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
bytes = "1.10.1"
flowly = { path = "../flowly" }

futures = "0.3.31"
log = "0.4.27"
openh264 = { version = "0.8.1", features = ["libloading"]}
thiserror = "2.0.12"
tokio = "1.47.0"

[dev-dependencies]
flowly-flv = { path = "../flowly-flv" }
tokio = { version = "1.47.0", features = ["full"] }
